# Python-Drone

./: README.md  channels.py  image_processing.py  logging.py  main.py  pid.py  quad_serial.py  serial.py  util.py  viz.py
cpp_ref/: CMakeLists.txt  README.md  linetrack.cpp  linetrack_working.cpp  pid.cpp  pid.hpp
python_ref/: EliDroneControl.py
